[metadata]
name = orlike
version = 0.1.0.1
author = caibingcheng
author_email = jack_cbc@163.com
description = A blog like plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caibingcheng/orlike
project_urls =
    Bug Tracker = https://github.com/caibingcheng/orlike/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
